# runbook-concept

./: .env  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/components/: approval_gate.py  context_panel.py  incident_timeline.py  metric_cards.py
app/pages/: chat.py  dashboard.py  incident_detail.py  runbooks.py  settings.py
app/state/: session.py
core/: approval.py  exceptions.py  models.py  orchestrator.py  runbook_engine.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INTEGRATIONS.md  MOCK_SERVICES.md  ROADMAP.md
integrations/: base.py  registry.py
integrations/mock/: base.py  mock_aws.py  mock_datadog.py  mock_pagerduty.py  mock_servicenow.py  mock_slack.py
integrations/mock/fixtures/scenarios/: database_connection.json  deployment_failure.json  high_cpu.json  network_latency.json
ml/: classifier.py  engine.py  mock_engine.py  recommender.py  summarizer.py
ml/prompts/: context.py  diagnosis.py  resolution.py  summarization.py
runbook_concept.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
runbooks/: database_connectivity.yaml  deployment_rollback.yaml  disk_space_remediation.yaml  high_cpu_troubleshooting.yaml  network_troubleshooting.yaml
tests/: conftest.py
tests/unit/: test_approval.py  test_config.py  test_mock_providers.py  test_models.py  test_orchestrator.py  test_registry.py  test_runbook_engine.py
